# framory

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
.github/: release.yml
.github/agents/: copilot-instructions.md
.github/workflows/: docs-lint.yml  release.yml
.specify/memory/: constitution.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py  websocket.py
backend/app/db/: schema.sql
backend/app/models/: channel.py  messages.py  photo.py
backend/app/services/: channel_manager.py  db.py  photo_service.py  scheduler.py
backend/tests/unit/: test_create_channel.py  test_show_progress_bar.py
docs/: architecture.md  development.md  usage.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CreateChannelForm.tsx  FolderBrowser.tsx  PhotoInfo.tsx  StatusBar.tsx  (+4 more)
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  pv-nfs.yaml  pvc-sqlite.yaml  service.yaml
specs/001-channel-photo-frame/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-project-documentation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-photo-progress-bar/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-tag-release-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-add-channel-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+20 files in other folders)
